<resources>
    <string name="app_name">CleanApp</string>
    <string name="header_login">Sign In</string>
    <string name="header_login_desc">Sign in to get all the feature og this app</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Sign in</string>
    <string name="i_dont_have_an_account">I don\'t have an account</string>
    <string name="error_password_not_valid">Password should be longer then 8 characters</string>
    <string name="error_email_not_valid">Email is not valid</string>
    <string name="go_back">Go back</string>
    <string name="header_register">Create account</string>
    <string name="header_register_desc">Create account to get all the feature og this app</string>
    <string name="name_hint">Your full name</string>
    <string name="create_account_button_text">Create account</string>
    <string name="error_name_not_valid">Name should not be empty</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_name_hint">Product name</string>
    <string name="product_price_hint">Product price</string>
    <string name="button_text_update">Update</string>
    <string name="button_text_delete">Delete</string>
    <string name="product_name_not_valid">Product name not valid</string>
    <string name="product_price_not_valid">Product price not valid</string>
    <string name="button_text_create">Create</string>
    <string name="all_products">All Products</string>
    <string name="product_details">Product Details</string>
    <string name="create_product">Create Product</string>
    <string name="sign_out">Sign Out</string>
</resources>