<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.login.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding_medium">

        <TextView
            android:paddingTop="@dimen/padding_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_login"
            android:textColor="@android:color/primary_text_light"
            android:textSize="@dimen/medium_text"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_login_desc"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/small_text" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_marginVertical="@dimen/margin_small"
            android:indeterminate="false"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_bar_height"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_button_text"
            android:id="@+id/login_button"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/i_dont_have_an_account"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>