<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.RegisterActivity">

    <LinearLayout
        android:paddingHorizontal="@dimen/padding_medium"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            app:icon="@drawable/ic_baseline_arrow_back_ios_24"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:text="@string/go_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/primary_text_light"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_small"
            android:textSize="@dimen/medium_text"
            android:text="@string/header_register"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_register_desc"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="@dimen/small_text" />

        <ProgressBar
            android:id="@+id/loading_progress_bar"
            android:layout_marginVertical="@dimen/margin_small"
            android:indeterminate="false"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_bar_height"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_input"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_edit_text"
                android:hint="@string/name_hint"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input"
            app:errorEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input"
            app:errorEnabled="true"
            app:passwordToggleEnabled="true"
            app:boxBackgroundColor="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_edit_text"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account_button_text"
            android:id="@+id/create_account_button"/>

    </LinearLayout>

</ScrollView>